# py-layout

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  README_zh.md  SECURITY.md  cookiecutter.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_name }}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DELETE_ME.md  Makefile  README.md  cookiecutter-config-file.yml  mkdocs.yml  pyproject.toml
{{ cookiecutter.project_name }}/_licences/: bsd3.txt
{{ cookiecutter.project_name }}/docker/: README.md
{{ cookiecutter.project_name }}/docs/: api.md  installation.md  usage.md
{{ cookiecutter.project_name }}/tests/test_example/: test_hello.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/: __init__.py  __main__.py  config.py
